--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eng>
+<html lang="eng">
     <head> 
         <meta charset="UTF-8">
         <title> Checkpoint 1 - HTML & CSS   </title>
@@ -8,8 +8,8 @@
      <body>
          <header>
              <nav>
-                <a class="header1 header3" href="home.html" target="_blank">HOME</a>
-                <a class="header1 header2" href="blog.html" target="_blank">BIOG</a>
+                <a class="header1 header3" href="index.html" >HOME</a>
+                <a class="header1 header2" href="blog.html" >BLOG</a>
             </nav>
          </header>
          <main>
