--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
          <main>
              <section class="home-align-center">
                  <article>
-                    <h1> The Box Model, Box Sizing, and Box Shadow </h1>
+                    <h1 class="The-Box-Model"> The Box Model, Box Sizing, and Box Shadow </h1>
                     <h2 class="Exercise-One"> Exercise One </h2>
                     <div class="box1">
                     <div class="box2"></div>
