--- a/blog.html
+++ b/blog.html
@@ -30,17 +30,16 @@
                  </article>
                  <article>
                      <div class="article2">
-                         <img src="assests/media/pic03.png" alt="translation">
+                         <img class="article-image" src="assests/media/pic03.png" alt="translation">
                          <h2 class="blog-heading fontsize" > 1914 translation by H. Rackham </h2>
                          <p class="blog-text" >But must explain to you how all this mistaken idea of denouncing 
                              pleasure and praising pain was
                               born and I will give you a complete account of the system. </p>
                           <a class="learn" href="#">Learn More</a>    
                      </div>
-                 </article>
-                 <article>
-                    <div class="article2 article3">
-                        <img src="assests/media/pic02.png" alt="dummy">
+
+                    <div class="article3">
+                        <img class="article-image" src="assests/media/pic02.png" alt="dummy">
                         <h2 class="blog-heading fontsize" > Lorem Ipsum is simply dummy text of the printing and typesetting </h2>
                         <p class="blog-text" >But must explain to you how all this mistaken idea of denouncing 
                             pleasure and praising pain was
